# involuntary-response

./: .gitignore
.claude/: CLAUDE.md  OPS-MANUAL.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v3.1-REQUIREMENTS.md  v4.0-REQUIREMENTS.md  v4.0-ROADMAP.md
.planning/phases/01-foundation-and-auth/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Desktop/Claude/Experiments/Projects/executive-voice-vault/src-tauri/: Cargo.toml  tauri.conf.json
Desktop/Claude/Experiments/Projects/executive-voice-vault/src-tauri/src/: ai.rs  commands.rs  derive.rs  lib.rs  quote.rs  settings.rs  vault.rs
client/: index.html  package-lock.json  package.json  vercel.json
client/api/: og.js
client/public/: robots.txt  sitemap.xml
client/src/: App.jsx  index.css
server/: .env.example  index.js  package-lock.json  package.json
server/db/: index.js
server/lib/: apple-music.js  email.js  link-preview.js  oembed.js  post-helpers.js  scheduler.js  spotify.js
server/middleware/: admin.js  auth.js  security.js
server/routes/: analytics.js  artists.js  auth.js  browse.js  categories.js  embeds.js  feed.js  invites.js  lineups.js  pages.js  posts.js  profile.js  search.js  sitemap.js  stats.js  users.js
server/scripts/: migrate-slugs.js
(+230 files in other folders)
